--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img alt="dog" src="https://media.istockphoto.com/id/1077145200/photo/adorable-welsh-corgi-pembroke-on-green-lawn-at-home.jpg?s=612x612&w=is&k=20&c=ZxFUWNFGv1RdbnLFs6QaHC1zeMWPNOmErSuilYqGxUU=">
     <script type="text/javascript" src="./script.js">
 </script>
 
